crates/tokmd-format/tests/snapshots/fun_snapshot_w50__snapshot_midi_single_note.snap
---
source: crates/tokmd-format/tests/fun_snapshot_w50.rs
expression: "hex.join(\" \")"
---
4d 54 68 64 00 00 00 06 00 00 00 01 01 e0 4d 54 72 6b 00 00 00 14 00 ff 51 03 07 a1 20 00 90 3c 64 83 60 80 3c 00 00 ff 2f 00
