crates/tokmd-format/tests/snapshots/fun_snapshot_w50__snapshot_obj_code_city.snap
---
source: crates/tokmd-format/tests/fun_snapshot_w50.rs
expression: output
---
# tokmd code city
o Rust
v 0 0 0
v 4 0 0
v 4 4 0
v 0 4 0
v 0 0 12
v 4 0 12
v 4 4 12
v 0 4 12
f 1 2 3 4
f 5 6 7 8
f 1 2 6 5
f 2 3 7 6
f 3 4 8 7
f 4 1 5 8
o Python
v 5 0 0
v 8 0 0
v 8 3 0
v 5 3 0
v 5 0 6
v 8 0 6
v 8 3 6
v 5 3 6
f 9 10 11 12
f 13 14 15 16
f 9 10 14 13
f 10 11 15 14
f 11 12 16 15
f 12 9 13 16
o TOML
v 9 0 0
v 10.5 0 0
v 10.5 1.5 0
v 9 1.5 0
v 9 0 2
v 10.5 0 2
v 10.5 1.5 2
v 9 1.5 2
f 17 18 19 20
f 21 22 23 24
f 17 18 22 21
f 18 19 23 22
f 19 20 24 23
f 20 17 21 24
o Markdown
v 0 5 0
v 2 5 0
v 2 7 0
v 0 7 0
v 0 5 1
v 2 5 1
v 2 7 1
v 0 7 1
f 25 26 27 28
f 29 30 31 32
f 25 26 30 29
f 26 27 31 30
f 27 28 32 31
f 28 25 29 32
